--- a/src/main/webapp/pages/main_admin.html
+++ b/src/main/webapp/pages/main_admin.html
@@ -6,6 +6,7 @@
 
 <link rel="stylesheet" type="text/css" href="/educational/js/easyui/themes/default/easyui.css">
 <link rel="stylesheet" type="text/css" href="/educational/js/easyui/themes/icon.css">
+<link href="/educational/css/style.css" rel="stylesheet" type="text/css" />
 <script type="text/javascript" src="/educational/js/easyui/jquery.min.js"></script>
 <script type="text/javascript" src="/educational/js/easyui/jquery.easyui.min.js"></script>
 <script type="text/javascript" src="/educational/js/easyui/locale/easyui-lang-zh_CN.js"></script>
@@ -85,6 +86,23 @@
 					<li data-options="attributes:{'url':'admin/teacher_list.html'}">
         				<span  >教师用户信息</span>
     				</li>
+				</ul>
+    		</div>
+    		<div title="课程信息管理"  style="overflow:auto;padding:20px;" >
+				<ul id="tree_menu3" class="easyui-tree">
+					<li data-options="attributes:{'url':'admin/course_list.html'}">
+        				<span  >课程信息</span>
+    				</li>
+				</ul>
+    		</div>
+    		<div title="教材信息管理"  style="overflow:auto;padding:20px;" >
+				<ul id="tree_menu4" class="easyui-tree">
+					
+				</ul>
+    		</div>
+    		<div title="其他"  style="overflow:auto;padding:20px;" >
+				<ul id="tree_menu5" class="easyui-tree">
+					
 				</ul>
     		</div>
 		</div>
