--- a/src/main/webapp/pages/admin/teacher_edit.html
+++ b/src/main/webapp/pages/admin/teacher_edit.html
@@ -146,10 +146,12 @@ function identityValidate(value) {
 		<div style="margin-top:10px;margin-left:200px;">
 			<label style="font-weight:bold;">姓名：</label><input id="tea_name" name="name" type="text" class="easyui-textbox" data-options="required:true,validType:'CHS'">
 		</div> 
-		<div style="margin-top:10px;text-align:center;">
-	    	<input id="tea_man" class="easyui-radiobutton" name="sex" value="男" label="男：" checked="checked">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-	    	<input id="tea_woman" class="easyui-radiobutton" name="sex" value="女" label="女：">
+		
+		<div class="radioBox" style="margin-top:10px;margin-left:200px;">
+		　　<input type="radio" value="男" name="sex" id="tea_man"><label for="tea_man">男</label>
+		　　<input type="radio" value="女" name="sex" id="tea_woman"><label for="tea_woman">女</label>
 		</div>
+		
 		<div style="margin-top:10px;margin-left:200px;">
 			<label style="font-weight:bold;">出生年月：</label><input id="tea_birth" name="teacher.birth" type="text" class="easyui-datebox" data-options="required:true,">
 		</div>
